--- a/app/src/main/res/layout/logintitle.xml
+++ b/app/src/main/res/layout/logintitle.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/logintitle_"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
+
+    <ProgressBar
+        android:id="@+id/login_progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -38,86 +53,81 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-             >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
 
-            <EditText
-                android:id="@+id/login_email_editText"
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:hint="e-mail"
-                android:inputType="textEmailAddress"/>
+                <EditText
+                    android:id="@+id/login_email_editText"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="50dp"
+                    android:hint="e-mail"
+                    android:inputType="textEmailAddress" />
 
-            <EditText
-                android:id="@+id/login_passwd_editText"
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:hint="password"
-                android:inputType="textPassword"/>
+                <EditText
+                    android:id="@+id/login_passwd_editText"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:hint="password"
+                    android:inputType="textPassword" />
 
-            <TextView
-                android:id="@+id/login_signup_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="회원가입"
-                android:layout_marginLeft="270dp"
-                android:layout_marginTop="10dp"
-                android:textSize="20sp"
-                />
+                <TextView
+                    android:id="@+id/login_signup_textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="270dp"
+                    android:layout_marginTop="10dp"
+                    android:text="회원가입"
+                    android:textSize="20sp" />
 
-            <Button
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:drawablePadding="1dp"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="#ffffff"
-                android:background="@color/colorAccent"
-                android:text="로그인"
-                android:id="@+id/login_email_button"
-                />
+                <Button
+                    android:id="@+id/login_email_button"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:background="@color/colorAccent"
+                    android:drawablePadding="1dp"
+                    android:text="로그인"
+                    android:textColor="#ffffff"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
-            <com.google.android.gms.common.SignInButton
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:id="@+id/googlelogin" />
+                <com.google.android.gms.common.SignInButton
+                    android:id="@+id/googlelogin"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp" />
 
-            <Button
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:drawableStart="@drawable/facebooklog2"
-                android:drawablePadding="1dp"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="#ffffff"
-                android:background="@color/colorPrimaryDark"
-                android:text="페이스북 로그인"
-                android:id="@+id/facebooklogin"
-                android:layout_marginBottom="30dp"
-                />
+                <Button
+                    android:id="@+id/facebooklogin"
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:background="@color/colorPrimaryDark"
+                    android:drawableStart="@drawable/facebooklog2"
+                    android:drawablePadding="1dp"
+                    android:text="페이스북 로그인"
+                    android:textColor="#ffffff"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
 
-
-
-        </LinearLayout>
+            </LinearLayout>
         </ScrollView>
 
-        
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
