--- a/app/src/main/res/layout/idea_recyclerview.xml
+++ b/app/src/main/res/layout/idea_recyclerview.xml
@@ -13,37 +13,37 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_profile"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/idea_profile"/>
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/idea_profile" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="200dp"
+                android:layout_width="238dp"
                 android:layout_height="40dp">
 
                 <TextView
-                    android:id="@+id/tv_author"
+                    android:id="@+id/tv_story"
                     android:layout_width="130dp"
                     android:layout_height="match_parent"
-                    android:textSize="10sp"
-                    android:text="안드로이드" />
+                    android:text="안드로이드"
+                    android:textSize="13sp" />
 
                 <TextView
                     android:id="@+id/tv_day"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="10sp"
-                    android:text="2011.1.1" />
+                    android:layout_width="106dp"
+                    android:layout_height="match_parent"
+                    android:text="2011.1.1"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="200dp"
+                android:layout_width="238dp"
                 android:layout_height="30dp"
                 android:orientation="horizontal">
 
@@ -51,34 +51,30 @@
                     android:id="@+id/iv_recommand"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/heart"/>
+                    android:src="@drawable/heart" />
 
                 <TextView
                     android:id="@+id/tv_recomand"
                     android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="10sp"
-                    android:text="2" />
+                    android:layout_height="match_parent"
+                    android:text="2"
+                    android:textSize="13sp" />
 
                 <ImageView
                     android:id="@+id/iv_write"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/comment"/>
-
+                    android:src="@drawable/comment" />
 
 
                 <TextView
                     android:id="@+id/tv_write"
                     android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="10sp"
-                    android:text="3" />
+                    android:layout_height="match_parent"
+                    android:textSize="13sp" />
 
 
             </LinearLayout>
-
-
 
 
         </LinearLayout>
@@ -86,6 +82,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/idpost"/>
 
 
         </LinearLayout>
