--- a/app/src/main/res/layout/home_newidea_recyclerview.xml
+++ b/app/src/main/res/layout/home_newidea_recyclerview.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/home_recyclerview_layout">
+    android:background="@drawable/home_recyclerview_layout"
+    android:foreground="?attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/home_re_newidea_date_textView"
