--- a/app/src/main/res/layout/posts_recyclerview.xml
+++ b/app/src/main/res/layout/posts_recyclerview.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
-    android:background="@drawable/posts_recyclerview_layout">
+    android:background="@drawable/posts_recyclerview_layout"
+    android:foreground="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/posts_imageView2"
