--- a/app/src/main/res/layout/ranking_recyclerview.xml
+++ b/app/src/main/res/layout/ranking_recyclerview.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
-    android:background="@drawable/ranking_recyclerview_layout">
+    android:background="@drawable/ranking_recyclerview_layout"
+    android:foreground="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/rank_re_profile_imageView"
