--- a/app/src/main/res/layout/ideamain.xml
+++ b/app/src/main/res/layout/ideamain.xml
@@ -31,11 +31,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
+            <TextView
+                android:id="@+id/ideamain_delete_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="삭제"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_gravity="end"
+                android:textColor="@color/design_default_color_error"
+                android:background="?attr/selectableItemBackground"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
