--- a/app/src/main/res/layout/activity_chatboard.xml
+++ b/app/src/main/res/layout/activity_chatboard.xml
@@ -32,13 +32,14 @@
         app:layout_constraintTop_toTopOf="@+id/chatboard_editText" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/saple_recyclerview"
+        android:id="@+id/chatboard_recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/chatboard_editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <ImageView
         android:id="@+id/bt_clib"
