--- a/app/src/main/res/layout/chat_bubble_me_recyclerview.xml
+++ b/app/src/main/res/layout/chat_bubble_me_recyclerview.xml
@@ -3,18 +3,41 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <TextView
-        android:id="@+id/chat_bubble_re_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/chat_bubble_re_profile_imageView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_chat_black"/>
     <TextView
+        android:id="@+id/chat_bubble_re_date_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="asd"
+        app:layout_constraintStart_toEndOf="@+id/chat_bubble_re_message_textView"
+        app:layout_constraintBottom_toBottomOf="@id/chat_bubble_re_message_textView"
+        android:text="2015.01.01"/>
+    <TextView
+        android:id="@+id/chat_bubble_re_name_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:text="이름"
+        app:layout_constraintStart_toEndOf="@+id/chat_bubble_re_profile_imageView"
+        app:layout_constraintTop_toTopOf="@+id/chat_bubble_re_profile_imageView"/>
+    <TextView
+        android:id="@+id/chat_bubble_re_message_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="안녕하세요"
         android:background="@color/colorChatBubbleMe"
-        app:layout_constraintStart_toEndOf="@+id/comment_date_textView"
-        app:layout_constraintBottom_toBottomOf="@+id/comment_date_textView"/>
+        app:layout_constraintStart_toEndOf="@+id/chat_bubble_re_profile_imageView"
+        app:layout_constraintTop_toBottomOf="@+id/chat_bubble_re_name_textView"
+        android:maxWidth="200dp"
+        android:singleLine="false"
+        android:padding="8dp"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
