--- a/app/src/main/res/layout/chat_bubble_you_recyclerview.xml
+++ b/app/src/main/res/layout/chat_bubble_you_recyclerview.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/chat_bubble_re_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,7 +11,10 @@
         android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_chat_black"/>
+        android:src="@drawable/ic_chat_black"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"/>
     <TextView
         android:id="@+id/chat_bubble_re_date_textView"
         android:layout_width="wrap_content"
@@ -20,7 +23,14 @@
         app:layout_constraintBottom_toBottomOf="@id/chat_bubble_re_message_textView"
         android:text="2015.01.01"
         android:layout_marginStart="8dp"/>
-
+    <TextView
+        android:id="@+id/chat_bubble_re_me_date_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/chat_bubble_re_message_textView"
+        app:layout_constraintBottom_toBottomOf="@id/chat_bubble_re_message_textView"
+        android:text="2015.01.01"
+        android:layout_marginStart="8dp"/>
     <TextView
         android:id="@+id/chat_bubble_re_name_textView"
         android:layout_width="wrap_content"
