--- a/app/src/main/res/layout/activity_extededimage.xml
+++ b/app/src/main/res/layout/activity_extededimage.xml
@@ -20,18 +20,17 @@
 
         </LinearLayout>
 
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <LinearLayout
             android:id="@+id/extededimageLayout"
             android:layout_width="match_parent"
             android:layout_height="670dp"
             android:orientation="horizontal">
 
-            <android.support.v4.view.ViewPager
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/viewpager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
         </LinearLayout>
+        </HorizontalScrollView>
 
         <LinearLayout
             android:layout_width="match_parent"
