--- a/app/src/main/res/layout/activity_extededimage.xml
+++ b/app/src/main/res/layout/activity_extededimage.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".extededimageActivity">
+    tools:context=".extededimageActivity"
+    android:background="#333333">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,12 +14,8 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="1dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:orientation="vertical">
 
-        </LinearLayout>
+
 
         <HorizontalScrollView
             android:layout_width="match_parent"
@@ -26,7 +23,7 @@
         <LinearLayout
             android:id="@+id/extededimageLayout"
             android:layout_width="match_parent"
-            android:layout_height="670dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
         </LinearLayout>
